Fix text-align on market rates table

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@ body {
     position: relative;
     display: -webkit-box;
     display: -ms-flexbox;
-    /* display: flex; */
+    display: flex;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     -webkit-box-align: center;
@@ -427,6 +427,10 @@ footer {
     font-size: 27px;
 }
 
+#coinPriceTable td {
+    text-align: center;
+}
+
 #rateTable tbody tr {
     margin: auto;
     width: auto;
@@ -437,7 +441,7 @@ footer {
     width: auto;
     text-align: center;
     margin: .5rem;
-    font-size: 27px;
+    font-size: 20px;
 }
 
 #selectAll,
@@ -505,19 +509,6 @@ footer {
 
 /*-------------------- Email-Sub HTML ---------------------*/
 
-.e-body {
-    height: 100vh;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    min-height: 100vh;
-    /* display: flex; */
-    flex-direction: column;
-}
-
 #formButton {
     width: 100%;
     text-align: center;
@@ -553,7 +544,7 @@ footer {
     align-self: center;
     display: block;
     margin: 20px auto;
-    width: 70%;
+    width: 100%;
     padding-bottom: 0;
 }
 
@@ -689,16 +680,17 @@ footer {
         align-items: center;
     }
 
+    /*---------------------- Market Rates HTML -----------------------*/
     #checkboxTable {
         width: 0;
     }
 
-    /*---------------------- Market Rates HTML -----------------------*/
     #rateTable tbody tr th {
         margin: auto;
         width: auto;
         margin: .5rem;
-        font-size: 27px;
+        font-size: 20px;
+        text-align: center;
     }
 
     /*---------------------- News HTML -----------------------*/
@@ -713,8 +705,9 @@ footer {
         padding-bottom: 20px;
     }
 
-    #coinPriceTable tbody {
-        text-align: center;
+    #coinPriceTable {
+        align-items: center;
+        margin: 20px auto;
     }
 
     /*---------------------- Email Sub HTML -----------------------*/
@@ -725,6 +718,7 @@ footer {
         display: block;
         width: 70%;
         padding-bottom: 10px;
+        margin: 20px auto;
     }
 
     .subscribe h1 {
@@ -830,7 +824,8 @@ footer {
         margin: auto;
         width: auto;
         margin: .5rem;
-        font-size: 27px;
+        font-size: 20px;
+        text-align: center;
     }
 
     .accor-container h1 {
@@ -946,6 +941,7 @@ footer {
             display: block;
             width: 50%;
             padding-bottom: 10px;
+            margin: 20px auto;
         }
     }
 }
